# gepa-artifact

./: .gitignore
gepa_artifact/benchmarks/hotpotQA/: hotpot_program.py
gepa_artifact/gepa/: gepa_utils.py
openevolve-port/: config.yaml  evaluator.py  pyproject.toml  test-prompt.txt
scripts/: eval.py
